tool-output/cppcheck/aide_cpp.txt
Checking aide/src/aide.c ...
Checking aide/src/aide.c: CONFIG_FILE...
Checking aide/src/aide.c: DEFAULT_DB...
Checking aide/src/aide.c: DEFAULT_DB_OUT...
Checking aide/src/aide.c: HAVE_UNISTD_H...
Checking aide/src/aide.c: WITH_ACL...
Checking aide/src/aide.c: WITH_CAPABILITIES...
Checking aide/src/aide.c: WITH_E2FSATTRS...
Checking aide/src/aide.c: WITH_GCRYPT...
Checking aide/src/aide.c: WITH_LOCALE...
Checking aide/src/aide.c: WITH_MHASH...
Checking aide/src/aide.c: WITH_SELINUX...
1/34 files checked 7% done
Checking aide/src/attributes.c ...
2/34 files checked 9% done
Checking aide/src/base64.c ...
3/34 files checked 10% done
Checking aide/src/be.c ...
Checking aide/src/be.c: HAVE_FCNTL...
Checking aide/src/be.c: WITH_CURL...
Checking aide/src/be.c: WITH_ZLIB...
4/34 files checked 12% done
Checking aide/src/commandconf.c ...
aide/src/commandconf.c:359:13: error: Memory pointed to by 'str' is freed twice. [doubleFree]
            free(str);
            ^
aide/src/commandconf.c:334:13: note: Memory pointed to by 'str' is freed twice.
            free(str);
            ^
aide/src/commandconf.c:359:13: note: Memory pointed to by 'str' is freed twice.
            free(str);
            ^
Checking aide/src/commandconf.c: HAVE_SYSLOG...
Checking aide/src/commandconf.c: WITH_CURL...
Checking aide/src/commandconf.c: WITH_E2FSATTRS...
Checking aide/src/commandconf.c: WITH_ZLIB...
5/34 files checked 16% done
Checking aide/src/conf_ast.c ...
6/34 files checked 19% done
Checking aide/src/conf_eval.c ...
aide/src/conf_eval.c:183:9: error: Memory pointed to by 'str' is freed twice. [doubleFree]
        free(str);
        ^
aide/src/conf_eval.c:179:13: note: Memory pointed to by 'str' is freed twice.
            free(str);
            ^
aide/src/conf_eval.c:183:9: note: Memory pointed to by 'str' is freed twice.
        free(str);
        ^
Checking aide/src/conf_eval.c: WITH_ACL...
Checking aide/src/conf_eval.c: WITH_E2FSATTRS...
Checking aide/src/conf_eval.c: WITH_ZLIB...
7/34 files checked 28% done
Checking aide/src/db.c ...
Checking aide/src/db.c: WITH_ACL...
Checking aide/src/db.c: WITH_CURL...
Checking aide/src/db.c: WITH_POSIX_ACL...
Checking aide/src/db.c: WITH_XATTR...
Checking aide/src/db.c: WITH_ZLIB...
8/34 files checked 31% done
Checking aide/src/db_disk.c ...
9/34 files checked 34% done
Checking aide/src/db_file.c ...
Checking aide/src/db_file.c: WITH_ACL...
Checking aide/src/db_file.c: WITH_ACL;WITH_POSIX_ACL...
Checking aide/src/db_file.c: WITH_CAPABILITIES...
Checking aide/src/db_file.c: WITH_E2FSATTRS...
Checking aide/src/db_file.c: WITH_XATTR...
Checking aide/src/db_file.c: WITH_ZLIB...
Checking aide/src/db_file.c: __GNUC__...
10/34 files checked 39% done
Checking aide/src/db_list.c ...
11/34 files checked 39% done
Checking aide/src/do_md.c ...
12/34 files checked 44% done
Checking aide/src/e2fsattrs.c ...
Checking aide/src/e2fsattrs.c: EXT2_NOCOMPR_FL...
Checking aide/src/e2fsattrs.c: EXT4_CASEFOLD_FL...
Checking aide/src/e2fsattrs.c: EXT4_EXTENTS_FL...
Checking aide/src/e2fsattrs.c: EXT4_INLINE_DATA_FL...
Checking aide/src/e2fsattrs.c: EXT4_PROJINHERIT_FL...
Checking aide/src/e2fsattrs.c: EXT4_VERITY_FL...
Checking aide/src/e2fsattrs.c: FS_DAX_FL...
Checking aide/src/e2fsattrs.c: FS_NOCOW_FL...
13/34 files checked 44% done
Checking aide/src/fopen.c ...
14/34 files checked 47% done
Checking aide/src/gen_list.c ...
aide/src/gen_list.c:770:3: error: Memory pointed to by 'str' is freed twice. [doubleFree]
  free(str);
  ^
aide/src/gen_list.c:669:3: note: Memory pointed to by 'str' is freed twice.
  free(str);
  ^
aide/src/gen_list.c:770:3: note: Memory pointed to by 'str' is freed twice.
  free(str);
  ^
aide/src/gen_list.c:773:7: error: Memory pointed to by 'str' is freed twice. [doubleFree]
      free(str);
      ^
aide/src/gen_list.c:669:3: note: Memory pointed to by 'str' is freed twice.
  free(str);
  ^
aide/src/gen_list.c:773:7: note: Memory pointed to by 'str' is freed twice.
      free(str);
      ^
Checking aide/src/gen_list.c: WITH_ACL...
Checking aide/src/gen_list.c: WITH_ACL;WITH_POSIX_ACL...
Checking aide/src/gen_list.c: WITH_CAPABILITIES...
Checking aide/src/gen_list.c: WITH_E2FSATTRS...
Checking aide/src/gen_list.c: WITH_SELINUX...
Checking aide/src/gen_list.c: WITH_XATTR...
15/34 files checked 56% done
Checking aide/src/getopt.c ...
Checking aide/src/getopt.c: HAVE_LIBINTL_H...
Checking aide/src/getopt.c: HAVE_STRING_H...
Checking aide/src/getopt.c: TEST...
Checking aide/src/getopt.c: VMS...
Checking aide/src/getopt.c: _LIBC...
Checking aide/src/getopt.c: _LIBC;__GLIBC__...
Checking aide/src/getopt.c: _LIBC;text_set_element...
Checking aide/src/getopt.c: __GNUC__...
Checking aide/src/getopt.c: __GNUC__;__STDC__;__STDC__=0;strlen...
Checking aide/src/getopt.c: __GNU_LIBRARY__...
Checking aide/src/getopt.c: __STDC__...
16/34 files checked 64% done
Checking aide/src/getopt1.c ...
Checking aide/src/getopt1.c: TEST...
Checking aide/src/getopt1.c: _LIBC;__GLIBC__...
Checking aide/src/getopt1.c: __GNU_LIBRARY__...
Checking aide/src/getopt1.c: __STDC__;__STDC__=0...
17/34 files checked 65% done
Checking aide/src/hashsum.c ...
Checking aide/src/hashsum.c: HAVE_MHASH_WHIRLPOOL;WITH_MHASH...
Checking aide/src/hashsum.c: WITH_GCRYPT...
Checking aide/src/hashsum.c: WITH_MHASH...
18/34 files checked 65% done
Checking aide/src/list.c ...
19/34 files checked 67% done
Checking aide/src/log.c ...
Checking aide/src/log.c: __GNUC__...
20/34 files checked 68% done
Checking aide/src/md.c ...
Checking aide/src/md.c: WITH_GCRYPT...
Checking aide/src/md.c: WITH_MHASH...
Checking aide/src/md.c: _PARAMETER_CHECK_...
21/34 files checked 70% done
Checking aide/src/progress.c ...
22/34 files checked 72% done
Checking aide/src/queue.c ...
23/34 files checked 74% done
Checking aide/src/report.c ...
aide/src/report.c:387:9: error: Memory pointed to by 'str' is freed twice. [doubleFree]
        free(str);
        ^
aide/src/report.c:383:9: note: Memory pointed to by 'str' is freed twice.
        free(str);
        ^
aide/src/report.c:387:9: note: Memory pointed to by 'str' is freed twice.
        free(str);
        ^
aide/src/report.c:391:9: error: Memory pointed to by 'str' is freed twice. [doubleFree]
        free(str);
        ^
aide/src/report.c:383:9: note: Memory pointed to by 'str' is freed twice.
        free(str);
        ^
aide/src/report.c:391:9: note: Memory pointed to by 'str' is freed twice.
        free(str);
        ^
aide/src/report.c:395:9: error: Memory pointed to by 'str' is freed twice. [doubleFree]
        free(str);
        ^
aide/src/report.c:383:9: note: Memory pointed to by 'str' is freed twice.
        free(str);
        ^
aide/src/report.c:395:9: note: Memory pointed to by 'str' is freed twice.
        free(str);
        ^
Checking aide/src/report.c: HAVE_SYSLOG...
Checking aide/src/report.c: HAVE_SYSLOG;HAVE_VSYSLOG...
Checking aide/src/report.c: HAVE_SYSLOG;WITH_AUDIT...
Checking aide/src/report.c: S_IFDOOR...
Checking aide/src/report.c: S_IFIFO...
Checking aide/src/report.c: S_IFPORT...
Checking aide/src/report.c: S_IFSOCK...
Checking aide/src/report.c: WITH_ACL...
Checking aide/src/report.c: WITH_ACL;WITH_POSIX_ACL...
Checking aide/src/report.c: WITH_AUDIT...
Checking aide/src/report.c: WITH_CAPABILITIES...
24/34 files checked 82% done
Checking aide/src/report_json.c ...
Checking aide/src/report_json.c: WITH_E2FSATTRS...
25/34 files checked 86% done
Checking aide/src/report_plain.c ...
Checking aide/src/report_plain.c: WITH_E2FSATTRS...
26/34 files checked 88% done
Checking aide/src/rx_rule.c ...
Checking aide/src/rx_rule.c: S_IFDOOR...
Checking aide/src/rx_rule.c: S_IFIFO...
Checking aide/src/rx_rule.c: S_IFPORT...
Checking aide/src/rx_rule.c: S_IFSOCK...
27/34 files checked 89% done
Checking aide/src/seltree.c ...
28/34 files checked 94% done
Checking aide/src/symboltable.c ...
29/34 files checked 94% done
Checking aide/src/tree.c ...
30/34 files checked 95% done
Checking aide/src/url.c ...
31/34 files checked 95% done
Checking aide/src/util.c ...
Checking aide/src/util.c: HAVE_SYSLOG...
Checking aide/src/util.c: HAVE_SYSLOG;LOG_AUTH...
Checking aide/src/util.c: HAVE_SYSLOG;LOG_CRON...
Checking aide/src/util.c: HAVE_SYSLOG;LOG_DAEMON...
Checking aide/src/util.c: HAVE_SYSLOG;LOG_KERN...
Checking aide/src/util.c: HAVE_SYSLOG;LOG_LOCAL0...
Checking aide/src/util.c: HAVE_SYSLOG;LOG_LOCAL1...
Checking aide/src/util.c: HAVE_SYSLOG;LOG_LOCAL2...
Checking aide/src/util.c: HAVE_SYSLOG;LOG_LOCAL3...
Checking aide/src/util.c: HAVE_SYSLOG;LOG_LOCAL4...
Checking aide/src/util.c: HAVE_SYSLOG;LOG_LOCAL5...
32/34 files checked 98% done
Checking aide/tests/check_aide.c ...
33/34 files checked 98% done
Checking aide/tests/check_attributes.c ...
34/34 files checked 100% done
nofile:0:0: information: Too many #ifdef configurations - cppcheck only checks 12 configurations. Use --force to check all configurations. For more details, use --enable=information. [toomanyconfigs]

